Dark mode styling for https://github.com/11ty/11ty-website/issues/1402

--- a/src/_includes/components/forms.css
+++ b/src/_includes/components/forms.css
@@ -18,6 +18,11 @@ footer .formprefs {
 	margin-right: -1rem;
 	margin-bottom: .5em;
 }
+@media (prefers-color-scheme: dark) {
+	footer .formprefs {
+		background-color: #2c2c2c;
+	}
+}
 .formprefs fieldset {
 	border: none;
 	padding-left: 0;
